package com.codeheadsystems.rules.model;

import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
import com.fasterxml.jackson.annotation.JsonProperty;
import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
import com.fasterxml.jackson.databind.annotation.JsonSerialize;
import org.immutables.value.Value;

/**
 * The interface Version.
 */
@Value.Immutable
@JsonSerialize(as = ImmutableVelocityVariableName.class)
@JsonDeserialize(builder = ImmutableVelocityVariableName.Builder.class)
@JsonIgnoreProperties(ignoreUnknown = true)
public interface VelocityVariableName {

  /**
   * Of version.
   *
   * @param name the name
   * @return the name
   */
  static VelocityVariableName of(final String name) {
    return ImmutableVelocityVariableName.builder()
        .value(name)
        .build();
  }

  /**
   * Value string.
   *
   * @return the string
   */
  @JsonProperty("value")
  String value();

}
